RESOLVED FIXED53759
Changed MarkedSpace to delegate grow/shrink decisions to Heap
https://bugs.webkit.org/show_bug.cgi?id=53759
Summary Changed MarkedSpace to delegate grow/shrink decisions to Heap
Geoffrey Garen
Reported 2011-02-03 23:18:44 PST
Changed MarkedSpace to delegate grow/shrink decisions to Heap
Attachments
Patch (5.49 KB, patch)
2011-02-03 23:27 PST, Geoffrey Garen
no flags
Patch (5.31 KB, patch)
2011-02-04 15:11 PST, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-02-03 23:27:09 PST
Geoffrey Garen
Comment 2 2011-02-03 23:41:40 PST
WebKit Review Bot
Comment 3 2011-02-04 02:43:36 PST
http://trac.webkit.org/changeset/77612 might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: accessibility/aria-activedescendant-crash.html accessibility/aria-checkbox-checked.html accessibility/aria-checkbox-text.html accessibility/aria-combobox.html accessibility/aria-controls-with-tabs.html
Nikolas Zimmermann
Comment 4 2011-02-04 04:59:22 PST
Reopening bug. I see sporadic assertions on both 10.5 and 10.6. An example: ASSERTION FAILED: m_heap.usedBlocks > neededBlocks (/Users/nikolaszimmermann/Coding/WebKit/Source/JavaScriptCore/runtime/MarkedSpace.cpp:174 void JSC::MarkedSpace::shrinkBlocks(size_t)) -> JSC::MarkedSpace::shrinkBlocks(unsigned long) -> JSC::MarkedSpace::sweep() -> JSC::Heap::reset(JSC::Heap::SweepToggle) -> JSC::Heap::collectAllGarbage() -> JSC::DefaultGCActivityCallbackPlatformData::trigger(__CFRunLoopTimer*, void*) -> __CFRunLoopRun -> CFRunLoopRunSpecific -> RunCurrentEventLoopInMode -> ReceiveNextEventCommon -> BlockUntilNextEventMatchingListInMode -> _DPSNextEvent -> -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] -> 0x1000162f4 -> -[NSApplication run] -> NSApplicationMain -> 0x10000a1c0 SL bot crashes all tests as well.
Ilya Tikhonovsky
Comment 5 2011-02-04 05:04:28 PST
rolled out Committed r77619 M Source/JavaScriptCore/runtime/MarkedSpace.cpp M Source/JavaScriptCore/runtime/Heap.cpp M Source/JavaScriptCore/runtime/Heap.h M Source/JavaScriptCore/runtime/MarkedSpace.h M Source/JavaScriptCore/ChangeLog r77619 = c436d330dbed26b8ba04af3f59c77705e7cf3d42 (refs/remotes/trunk)
Geoffrey Garen
Comment 6 2011-02-04 15:11:48 PST
Oliver Hunt
Comment 7 2011-02-04 15:12:40 PST
Comment on attachment 81301 [details] Patch r=me
Geoffrey Garen
Comment 8 2011-02-04 16:20:21 PST
Kristian Monsen
Comment 9 2025-12-02 18:57:35 PST
*** Bug 301900 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.